// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cards/> <AutomaticUpdatesCard/> Snapshot: activated 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card"
    >
      <div
        class="card-body"
      >
        <div
          class="row align-items-center"
        >
          <div
            class="col"
          >
            <h6
              class="text-uppercase text-muted mb-2 "
            >
              Automatic Updates
            </h6>
            <span
              class="status"
            >
              Activated
            </span>
          </div>
          <div
            class="col-auto"
          >
            <span
              class="h2 text-success"
            >
              <i
                class="fa"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <AutomaticUpdatesCard/> Snapshot: disabled 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card"
    >
      <div
        class="card-body"
      >
        <div
          class="row align-items-center"
        >
          <div
            class="col"
          >
            <h6
              class="text-uppercase text-muted mb-2 "
            >
              Automatic Updates
            </h6>
            <span
              class="status"
            >
              Disabled
            </span>
          </div>
          <div
            class="col-auto"
          >
            <span
              class="h2 text-danger"
            >
              <i
                class="fa"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <DataCollectionCard/> Snapshot: activated 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card"
    >
      <div
        class="card-body"
      >
        <div
          class="row align-items-center"
        >
          <div
            class="col"
          >
            <h6
              class="text-uppercase text-muted mb-2"
            >
              Threat Detection
            </h6>
            <span
              class="status"
            >
              Activated
            </span>
          </div>
          <div
            class="col-auto"
          >
            <span
              class="h2 text-success"
            >
              <i
                class="fa"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <DataCollectionCard/> Snapshot: disabled 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card"
    >
      <div
        class="card-body"
      >
        <div
          class="row align-items-center"
        >
          <div
            class="col"
          >
            <h6
              class="text-uppercase text-muted mb-2"
            >
              Threat Detection
            </h6>
            <span
              class="status"
            >
              Disabled
            </span>
          </div>
          <div
            class="col-auto"
          >
            <span
              class="h2 text-danger"
            >
              <i
                class="fa"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <DynamicFirewallCard/> Snapshot: activated 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card"
    >
      <div
        class="card-body"
      >
        <div
          class="row align-items-center"
        >
          <div
            class="col"
          >
            <h6
              class="text-uppercase text-muted mb-2"
            >
              Dynamic Firewall
            </h6>
            <span
              class="status"
            >
              Activated
            </span>
          </div>
          <div
            class="col-auto"
          >
            <span
              class="h2 text-success"
            >
              <i
                class="fa"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <DynamicFirewallCard/> Snapshot: disabled 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card"
    >
      <div
        class="card-body"
      >
        <div
          class="row align-items-center"
        >
          <div
            class="col"
          >
            <h6
              class="text-uppercase text-muted mb-2"
            >
              Dynamic Firewall
            </h6>
            <span
              class="status"
            >
              Disabled
            </span>
          </div>
          <div
            class="col-auto"
          >
            <span
              class="h2 text-danger"
            >
              <i
                class="fa"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <LibrespeedCard/> Snapshot: contains tests 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card h-100"
    >
      <div
        class="card-body d-flex flex-column"
      >
        <h6
          class="text-uppercase text-muted mb-2"
        >
          LibreSpeed
          <a
            class="text-secondary"
            href="/librespeed/speed-test"
            title="Go to LibreSpeed"
          >
            <i
              class="fa"
            />
          </a>
        </h6>
        <div
          class="table-responsive"
        >
          <table
            class="table table-borderless table-hover col-12"
          >
            <tbody>
              <tr>
                <th
                  class="text-nowrap"
                  scope="row"
                >
                  Download
                  <span
                    class="badge text-bg-secondary"
                    title="Megabit per second"
                  >
                    Mb/s
                  </span>
                </th>
                <td
                  class="text-end"
                >
                  930
                </td>
              </tr>
              <tr>
                <th
                  class="text-nowrap"
                  scope="row"
                >
                  Upload
                  <span
                    class="badge text-bg-secondary"
                    title="Megabit per second"
                  >
                    Mb/s
                  </span>
                </th>
                <td
                  class="text-end"
                >
                  <span>
                    930
                  </span>
                </td>
              </tr>
              <tr>
                <th
                  class="text-nowrap"
                  scope="row"
                >
                  Ping
                  <span
                    class="badge text-bg-secondary"
                    title="Millisecond"
                  >
                    ms
                  </span>
                </th>
                <td
                  class="text-end"
                >
                  <span>
                    N/A
                  </span>
                </td>
              </tr>
              <tr>
                <th
                  class="text-nowrap"
                  scope="row"
                >
                  Jitter
                  <span
                    class="badge text-bg-secondary"
                    title="Millisecond"
                  >
                    ms
                  </span>
                </th>
                <td
                  class="text-end"
                >
                  <span>
                    N/A
                  </span>
                </td>
              </tr>
              <tr
                class="text-nowrap"
              >
                <th
                  scope="row"
                >
                  Server
                </th>
                <td
                  class="text-end"
                >
                  <span>
                    N/A
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <p
          class="d-flex card-text flex-grow-1"
        >
          <small
            class="text-muted mt-auto"
          >
            Performed
             
            49 years ago
          </small>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <LibrespeedCard/> Snapshot: empty 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card h-100"
    >
      <div
        class="card-body d-flex flex-column"
      >
        <h6
          class="text-uppercase text-muted mb-2"
        >
          LibreSpeed
          <a
            class="text-secondary"
            href="/librespeed/speed-test"
            title="Go to LibreSpeed"
          >
            <i
              class="fa"
            />
          </a>
        </h6>
        <p
          class="text-muted"
        >
          No tests have been performed lately.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <OpenVPNClientsCard/> Snapshot: contains clients 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card h-100"
    >
      <div
        class="card-body"
      >
        <h6
          class="text-uppercase text-muted mb-2"
        >
          OpenVPN Clients
          <a
            class="text-secondary"
            href="/openvpn/client-settings"
            title="Go to OpenVPN Client Settings"
          >
            <i
              class="fa"
            />
          </a>
        </h6>
        <form>
          <div
            class="table-responsive"
          >
            <table
              class="table table-borderless table-hover col-sm-12"
            >
              <tbody>
                <tr>
                  <th
                    scope="row"
                  >
                    <span>
                      turris
                    </span>
                  </th>
                  <td
                    class="text-end"
                  >
                    <span
                      class="text-success"
                    >
                      <i
                        class="fa"
                      />
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Cards/> <OpenVPNClientsCard/> Snapshot: empty 1`] = `
<div>
  <div
    class="col mb-4"
  >
    <div
      class="card h-100"
    >
      <div
        class="card-body"
      >
        <h6
          class="text-uppercase text-muted mb-2"
        >
          OpenVPN Clients
          <a
            class="text-secondary"
            href="/openvpn/client-settings"
            title="Go to OpenVPN Client Settings"
          >
            <i
              class="fa"
            />
          </a>
        </h6>
        <p
          class="text-muted"
        >
          There are no clients added yet.
        </p>
      </div>
    </div>
  </div>
</div>
`;
